# filter_notes

./: README.md  _config.yml  basics.md  build.py  burgers_exact.md  dr110_cymbal.md  gibbs.md  grunwald_letnikov.md  heat_wave_equation.md  implicitwaveequation.md  index.html  index.md  ndboct.md  some.theme  template.html  waveequation.md  waveequation2d.md  waveequation_fractional_zener.md  waveequation_newmark_beta.md  waveequationimplicit.md
1pole_complex_lowpass/: 1pole_complex_lowpass.html  1pole_complex_lowpass.md  biquad_sum_equivalence.py  plot.py  test.py
3pole_lowpass/: 3pole_lowpass.html  3pole_lowpass.md
_stab/: choir.md  nonliner_acoustics.md  waveequation_parameters.md
_stub/: energy_decay_curve.md  wavefunction.md
adaa_finite_difference_errors/: adaa.py  adaa_divided_difference.hpp  adaa_finite_difference_errors.html  adaa_finite_difference_errors.md  divided_difference_formula.py  hardclip_derivative.py
adaptive_notch/: adaptive_notch.html  adaptive_notch.md  approx.py  notch.py
am_pitchshift/: am_pitchshift.html  am_pitchshift.md  frequencyshift.py  linearphase.py  pitchshift.py
amplitude_modulation/: am.py  amplitude_modulation.html  amplitude_modulation.md  correctionfilter.py
antiderivative_antialiasing/: adaa.py  adaa_othermethods.py  adaa_parkermod.py  antiderivative_antialiasing.html  antiderivative_antialiasing.md  solve_antiderivative.py  solve_bilbao.py  solve_parkermod.py  test_expr.py
basic_fir/: basic_fir.html  basic_fir.md  basic_fir.py
biquad_filter_comparison/: biquad_filter_comparison.html  biquad_filter_comparison.md
biquad_filter_comparison/code/cpp/: CMakeLists.txt  README.md  benchmark.cpp  build.ps1
burgers_exact/: burgers_exact.html  burgers_exact.md
burgers_godunov/: burgers_godunov.html  burgers_godunov.md
chamberlin_svf/: chamberlin.py  chamberlin_svf.html  chamberlin_svf.md  transferfunction.py
control_rate_interpolation/: control_rate_interpolation.html  control_rate_interpolation.md
control_rate_interpolation/demo/: CMakeLists.txt  README  README.md  bench_linterp.cpp  bench_smoother.cpp  emafilter.cpp  linterp.cpp  naive.cpp  pcontroller.cpp  plot.py  rate_limiter.cpp  run.ps1  run.sh  smoother.cpp
convolution_without_latency/: convolution_without_latency.html  convolution_without_latency.md  plot.py
convolution_without_latency/cpp/: CMakeLists.txt  build.ps1  comparecpuload.py  plot.py  reducedlatency.py  test.cpp  test.py
crossover_filter/: crossover_filter.html  crossover_filter.md
delay/: delay.html  delay.md
doc/: index.html
docs/: basics.html  burgers_exact.html  dr110_cymbal.html  gibbs.html  grunwald_letnikov.html  heat_wave_equation.html  highlight.pack.js  index.html  ndboct.html  wave2d.html  waveequation.html  waveequation_fractional_zener.html  waveequation_newmark_beta.html  waveequationimplicit.html
double_ema_filter/: double_ema_filter.html  double_ema_filter.md  test.py
double_ema_filter/cpp/envelope/: CMakeLists.txt  brenttest.py  build.ps1  test.cpp  test.py
doublefilter/: doublefilter.html  doublefilter.md
downsampling/: downsampling.html  downsampling.md
dr110_cymbal/: dr110_cymbal.html  dr110_cymbal.md
ema_cutoff/: cancellation.py  ema_cutoff.html  ema_cutoff.md  ema_cutoff.py  emaaccuratecutoff.py  taylor.py
exponential_envelope/: exponential_envelope.html  exponential_envelope.md
exponential_envelope/demo/cpp/: CMakeLists.txt  P_exponential_envelope.hpp  expAD.cpp  exponential_envelope.hpp  plot.py  run.ps1
exponential_envelope/demo/cpp/lib/: LambertW.hpp  README.md
exppoly_envelope/: exppoly_envelope.html  exppoly_envelope.md  exppolyenvelope.html  exppolyenvelope.md
fast_windowed_sinc/: cosine_sum.py  delay.py  fast_windowed_sinc.html  fast_windowed_sinc.md  window_function.py  windowed_sinc.py
fdn_coupling_by_feedback_matrix/: fdn_coupling_by_feedback_matrix.html  fdn_coupling_by_feedback_matrix.md  out_all_b.json  test.py
feedback_delay_network/: feedback_delay_network.html  feedback_delay_network.md
fractional_delay_filter_socp/: fractional_delay_filter_socp.html  fractional_delay_filter_socp.md
gibbs/: gibbs.html  gibbs.md
golly_generations_clustering/: gallery.html  gallery.md  golly_generations_clustering.html  (+1 more)
lfo_temposync/cpp/bench/: CMakeLists.txt  bench.cpp  plot.py
lfo_temposync/cpp/test/: CMakeLists.txt  build.ps1  test.cpp
truepeak_computation/code/cpp/benchmark/: CMakeLists.txt  bench.cpp
(+471 files in other folders)
